--- a/style.css
+++ b/style.css
@@ -372,3 +372,9 @@ li {
   margin-bottom: 15px;
   text-align: center;
 }
+.colabo {
+  max-width: 300px;
+  height: 200px;
+  border: 2px solid #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
